# invoice-extraction-env

./: .gitignore  Blog.md  Dockerfile  PLAN.md  README.md  __init__.py  app.py  course.md  inference.py  openenv.yaml  project_juiding_criterion.txt  pyproject.toml  requirements.txt  runpod_setup.sh  setup_runpod.sh  train.py  train_4b.py  train_hf_jobs.py  train_runpod.py
server/: __init__.py  app.py  documents.py  environment.py  graders.py  gradio_ui.py  models.py  procedural.py
